force-app/main/default/objects/AccidentReception_Management__c/AccidentReception_Management__c.object-meta.xml
<CustomObject>
    <label>事故受付・伝言管理</label>
    <nameField>
        <label>受付番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>