force-app/main/default/objects/AccidentReception_Management__c/fields/accident__c.field-meta.xml
<CustomField>
    <fullName>accident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>事故</label>
    <referenceTo>AccidentReception_CallData__c</referenceTo>
    <relationshipLabel>事故受付・伝言管理 (事故)</relationshipLabel>
    <relationshipName>accident</relationshipName>
    <type>Lookup</type>
</CustomField>