force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentDate__c.field-meta.xml
<CustomField>
    <fullName>AccidentDate__c</fullName>
    <label>事故日</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故の事故日に同じ</fullName>
            </value>
            <value>
                <fullName>フリー入力</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>