force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentDateInputS__c.field-meta.xml
<CustomField>
    <fullName>AccidentDateInputS__c</fullName>
    <label>事故日（西暦）</label>
    <type>Date</type>
</CustomField>