force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentDateInputW__c.field-meta.xml
<CustomField>
    <fullName>AccidentDateInputW__c</fullName>
    <description>和暦形式</description>
    <label>事故日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>