force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentLocation__c.field-meta.xml
<CustomField>
    <fullName>AccidentLocation__c</fullName>
    <label>事故場所</label>
    <type>TextArea</type>
</CustomField>