force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentLocationHarbor__c.field-meta.xml
<CustomField>
    <fullName>AccidentLocationHarbor__c</fullName>
    <label>事故場所（港）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>