force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentLocationPrefecture__c.field-meta.xml
<CustomField>
    <fullName>AccidentLocationPrefecture__c</fullName>
    <inlineHelpText>※不明時は「不明」と入力。</inlineHelpText>
    <label>事故場所（都道府県）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北海道</fullName>
                <label>01.北海道</label>
            </value>
            <value>
                <fullName>青森県</fullName>
                <label>02.青森県</label>
            </value>
            <value>
                <fullName>岩手県</fullName>
                <label>03.岩手県</label>
            </value>
            <value>
                <fullName>宮城県</fullName>
                <label>04.宮城県</label>
            </value>
            <value>
                <fullName>秋田県</fullName>
                <label>10.秋田県</label>
            </value>
            <value>
                <fullName>山形県</fullName>
                <label>11.山形県</label>
            </value>
            <value>
                <fullName>福島県</fullName>
                <label>12.福島県</label>
            </value>
            <value>
                <fullName>茨城県</fullName>
                <label>20.茨城県</label>
            </value>
            <value>
                <fullName>栃木県</fullName>
                <label>21.栃木県</label>
            </value>
            <value>
                <fullName>群馬県</fullName>
                <label>22.群馬県</label>
            </value>
            <value>
                <fullName>埼玉県</fullName>
                <label>23.埼玉県</label>
            </value>
            <value>
                <fullName>千葉県</fullName>
                <label>24.千葉県</label>
            </value>
            <value>
                <fullName>東京都</fullName>
                <label>25.東京都</label>
            </value>
            <value>
                <fullName>神奈川県</fullName>
                <label>26.神奈川県</label>
            </value>
            <value>
                <fullName>新潟県</fullName>
                <label>30.新潟県</label>
            </value>
            <value>
                <fullName>富山県</fullName>
                <label>31.富山県</label>
            </value>
            <value>
                <fullName>石川県</fullName>
                <label>32.石川県</label>
            </value>
            <value>
                <fullName>福井県</fullName>
                <label>33.福井県</label>
            </value>
            <value>
                <fullName>山梨県</fullName>
                <label>34.山梨県</label>
            </value>
            <value>
                <fullName>長野県</fullName>
                <label>40.長野県</label>
            </value>
            <value>
                <fullName>岐阜県</fullName>
                <label>41.岐阜県</label>
            </value>
            <value>
                <fullName>静岡県</fullName>
                <label>42.静岡県</label>
            </value>
            <value>
                <fullName>愛知県</fullName>
                <label>43.愛知県</label>
            </value>
            <value>
                <fullName>三重県</fullName>
                <label>44.三重県</label>
            </value>
            <value>
                <fullName>滋賀県</fullName>
                <label>50.滋賀県</label>
            </value>
            <value>
                <fullName>京都府</fullName>
                <label>57.京都府</label>
            </value>
            <value>
                <fullName>大阪府</fullName>
                <label>58.大阪府</label>
            </value>
            <value>
                <fullName>兵庫県</fullName>
                <label>59.兵庫県</label>
            </value>
            <value>
                <fullName>奈良県</fullName>
                <label>60.奈良県</label>
            </value>
            <value>
                <fullName>和歌山県</fullName>
                <label>61.和歌山県</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>