force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentLocationStorage__c.field-meta.xml
<CustomField>
    <fullName>AccidentLocationStorage__c</fullName>
    <label>事故場所（保管中）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>