force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentLocationType__c.field-meta.xml
<CustomField>
    <fullName>AccidentLocationType__c</fullName>
    <label>場所種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自宅</fullName>
                <default>true</default>
                <label>自宅</label>
            </value>
            <value>
                <fullName>会社</fullName>
            </value>
            <value>
                <fullName>学校</fullName>
            </value>
            <value>
                <fullName>道路上</fullName>
            </value>
            <value>
                <fullName>目的所在地</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>道路</fullName>
                <isActive>false</isActive>
                <label>道路</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>