force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentReport__c.field-meta.xml
<CustomField>
    <fullName>AccidentReport__c</fullName>
    <label>事故届出（扱い）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未届</fullName>
            </value>
            <value>
                <fullName>物損扱</fullName>
            </value>
            <value>
                <fullName>人身扱</fullName>
            </value>
            <value>
                <fullName>扱不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>