force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentSite__c.field-meta.xml
<CustomField>
    <fullName>AccidentSite__c</fullName>
    <label>事故地</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北海道</fullName>
            </value>
            <value>
                <fullName>青森</fullName>
            </value>
            <value>
                <fullName>秋田</fullName>
            </value>
            <value>
                <fullName>岩手</fullName>
            </value>
            <value>
                <fullName>宮城</fullName>
            </value>
            <value>
                <fullName>山形</fullName>
            </value>
            <value>
                <fullName>福島</fullName>
            </value>
            <value>
                <fullName>新潟</fullName>
            </value>
            <value>
                <fullName>長野</fullName>
            </value>
            <value>
                <fullName>群馬</fullName>
            </value>
            <value>
                <fullName>栃木</fullName>
            </value>
            <value>
                <fullName>茨城</fullName>
            </value>
            <value>
                <fullName>東京</fullName>
            </value>
            <value>
                <fullName>神奈川</fullName>
            </value>
            <value>
                <fullName>千葉</fullName>
            </value>
            <value>
                <fullName>埼玉</fullName>
            </value>
            <value>
                <fullName>山梨</fullName>
            </value>
            <value>
                <fullName>愛知</fullName>
            </value>
            <value>
                <fullName>静岡</fullName>
            </value>
            <value>
                <fullName>岐阜</fullName>
            </value>
            <value>
                <fullName>三重</fullName>
            </value>
            <value>
                <fullName>富山</fullName>
            </value>
            <value>
                <fullName>石川</fullName>
            </value>
            <value>
                <fullName>福井</fullName>
            </value>
            <value>
                <fullName>大阪</fullName>
            </value>
            <value>
                <fullName>京都</fullName>
            </value>
            <value>
                <fullName>滋賀</fullName>
            </value>
            <value>
                <fullName>奈良</fullName>
            </value>
            <value>
                <fullName>和歌山</fullName>
            </value>
            <value>
                <fullName>兵庫</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>