force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentSituation__c.field-meta.xml
<CustomField>
    <fullName>AccidentSituation__c</fullName>
    <label>事故状況・原因</label>
    <type>TextArea</type>
</CustomField>