force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentSituationLivePass__c.field-meta.xml
<CustomField>
    <fullName>AccidentSituationLivePass__c</fullName>
    <label>事故状況文（動画受付）</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>