force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentTime__c.field-meta.xml
<CustomField>
    <fullName>AccidentTime__c</fullName>
    <description>※傷害・傷害以外のみ反映</description>
    <label>事故時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>