force-app/main/default/objects/AccidentReception_Management__c/fields/AccidentTimeNisei__c.field-meta.xml
<CustomField>
    <fullName>AccidentTimeNisei__c</fullName>
    <label>事故時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>