force-app/main/default/objects/AccidentReception_Management__c/fields/AddingAddress1__c.field-meta.xml
<CustomField>
    <fullName>AddingAddress1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>宛先追加①</label>
    <referenceTo>Destination__c</referenceTo>
    <relationshipLabel>事故受付・伝言管理 (宛先追加①)</relationshipLabel>
    <relationshipName>MangementToAddress1</relationshipName>
    <type>Lookup</type>
</CustomField>