force-app/main/default/objects/AccidentReception_Management__c/fields/AddingAddress2__c.field-meta.xml
<CustomField>
    <fullName>AddingAddress2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>宛先追加②</label>
    <referenceTo>Destination__c</referenceTo>
    <relationshipLabel>事故受付・伝言管理 (宛先追加②)</relationshipLabel>
    <relationshipName>MangementToAddress2</relationshipName>
    <type>Lookup</type>
</CustomField>