force-app/main/default/objects/AccidentReception_Management__c/fields/AddingAddress3__c.field-meta.xml
<CustomField>
    <fullName>AddingAddress3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>宛先追加③</label>
    <referenceTo>Destination__c</referenceTo>
    <relationshipLabel>事故受付・伝言管理 (宛先追加③)</relationshipLabel>
    <relationshipName>MangementToAddress3</relationshipName>
    <type>Lookup</type>
</CustomField>