force-app/main/default/objects/AccidentReception_Management__c/fields/Agency1__c.field-meta.xml
<CustomField>
    <fullName>Agency1__c</fullName>
    <label>代理店①</label>
    <length>50</length>
    <type>Text</type>
</CustomField>