force-app/main/default/objects/AccidentReception_Management__c/fields/AgencyChkReport__c.field-meta.xml
<CustomField>
    <fullName>AgencyChkReport__c</fullName>
    <formula>IF ( AgencyChk__c , &quot;1&quot;, &quot;&quot;)</formula>
    <label>代理店チェック（表示）</label>
    <type>Text</type>
</CustomField>