force-app/main/default/objects/AccidentReception_Management__c/fields/AgencyConfirmHelp__c.field-meta.xml
<CustomField>
    <fullName>AgencyConfirmHelp__c</fullName>
    <defaultValue>&quot;※確認済みの情報に✓を入力&quot;</defaultValue>
    <label>代理店情報確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>