force-app/main/default/objects/AccidentReception_Management__c/fields/AgencyNameMsg__c.field-meta.xml
<CustomField>
    <fullName>AgencyNameMsg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>代理店名(確認必須)</label>
    <type>Checkbox</type>
</CustomField>