force-app/main/default/objects/AccidentReception_Management__c/fields/AutoNumeralNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumeralNumber__c</fullName>
    <formula>RIGHT( Name, 6)</formula>
    <label>自動採番（数字）</label>
    <type>Text</type>
</CustomField>