force-app/main/default/objects/AccidentReception_Management__c/fields/BedoreDisasterType__c.field-meta.xml
<CustomField>
    <fullName>BedoreDisasterType__c</fullName>
    <label>災害の種類（BEDORE取得）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>台風の強風</fullName>
            </value>
            <value>
                <fullName>台風の洪水</fullName>
            </value>
            <value>
                <fullName>地震</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>