force-app/main/default/objects/AccidentReception_Management__c/fields/BedoreScenarioType__c.field-meta.xml
<CustomField>
    <fullName>BedoreScenarioType__c</fullName>
    <label>BEDOREシナリオタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>傷害事故シナリオ</fullName>
            </value>
            <value>
                <fullName>賠償事故シナリオ</fullName>
            </value>
            <value>
                <fullName>携行品・用品事故シナリオ</fullName>
            </value>
            <value>
                <fullName>第三分野事故シナリオ</fullName>
            </value>
            <value>
                <fullName>その他事故シナリオ</fullName>
            </value>
            <value>
                <fullName>台風事故シナリオ</fullName>
            </value>
            <value>
                <fullName>地震事故シナリオ</fullName>
            </value>
            <value>
                <fullName>物損事故シナリオ</fullName>
            </value>
            <value>
                <fullName>既報事故シナリオ</fullName>
            </value>
            <value>
                <fullName>契約関連シナリオ</fullName>
            </value>
            <value>
                <fullName>その他問合せシナリオ</fullName>
            </value>
            <value>
                <fullName>自然災害受付</fullName>
            </value>
            <value>
                <fullName>火災新種受付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>