force-app/main/default/objects/AccidentReception_Management__c/fields/BillingAddressInput__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressInput__c</fullName>
    <label>送付先住所と宛名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>