force-app/main/default/objects/AccidentReception_Management__c/fields/BranchSalesOffice2__c.field-meta.xml
<CustomField>
    <fullName>BranchSalesOffice2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支店・営業店②</label>
    <referenceTo>BranchSalesOffice2__c</referenceTo>
    <relationshipName>Relation2</relationshipName>
    <type>Lookup</type>
</CustomField>