force-app/main/default/objects/AccidentReception_Management__c/fields/Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Broadcast__c</fullName>
    <label>同報</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>