force-app/main/default/objects/AccidentReception_Management__c/fields/CallDataIncomingCallTime__c.field-meta.xml
<CustomField>
    <fullName>CallDataIncomingCallTime__c</fullName>
    <label>入電時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>