force-app/main/default/objects/AccidentReception_Management__c/fields/CallDataLine__c.field-meta.xml
<CustomField>
    <fullName>CallDataLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回線（スキル名・入力番号）</label>
    <referenceTo>CallDataLine__c</referenceTo>
    <relationshipLabel>事故受付・伝言管理</relationshipLabel>
    <relationshipName>Line_Management</relationshipName>
    <type>Lookup</type>
</CustomField>