force-app/main/default/objects/AccidentReception_Management__c/fields/CallDateS__c.field-meta.xml
<CustomField>
    <fullName>CallDateS__c</fullName>
    <label>入電日（西暦）</label>
    <type>Date</type>
</CustomField>