force-app/main/default/objects/AccidentReception_Management__c/fields/CallerContactInfo__c.field-meta.xml
<CustomField>
    <fullName>CallerContactInfo__c</fullName>
    <label>連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>