force-app/main/default/objects/AccidentReception_Management__c/fields/CallerContactInformation2CD__c.field-meta.xml
<CustomField>
    <fullName>CallerContactInformation2CD__c</fullName>
    <label>入電者の連絡先2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>