force-app/main/default/objects/AccidentReception_Management__c/fields/CallerContactInformationCD__c.field-meta.xml
<CustomField>
    <fullName>CallerContactInformationCD__c</fullName>
    <label>入電者の連絡先1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>