force-app/main/default/objects/AccidentReception_Management__c/fields/CallerContractorRelationInput__c.field-meta.xml
<CustomField>
    <fullName>CallerContractorRelationInput__c</fullName>
    <label>入電者の続柄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>