force-app/main/default/objects/AccidentReception_Management__c/fields/CarColor__c.field-meta.xml
<CustomField>
    <fullName>CarColor__c</fullName>
    <label>車色</label>
    <length>255</length>
    <type>Text</type>
</CustomField>