force-app/main/default/objects/AccidentReception_Management__c/fields/CarNameAndColorMsg__c.field-meta.xml
<CustomField>
    <fullName>CarNameAndColorMsg__c</fullName>
    <label>車名・車色</label>
    <length>255</length>
    <type>Text</type>
</CustomField>