force-app/main/default/objects/AccidentReception_Management__c/fields/CarRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>CarRegistrationNumber__c</fullName>
    <label>登録番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>