force-app/main/default/objects/AccidentReception_Management__c/fields/CastFixedPeriodDay__c.field-meta.xml
<CustomField>
    <fullName>CastFixedPeriodDay__c</fullName>
    <label>固定期間見込み（日間）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>