force-app/main/default/objects/AccidentReception_Management__c/fields/CastFixedPeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>CastFixedPeriodFrom__c</fullName>
    <label>固定期間見込み（開始）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>