force-app/main/default/objects/AccidentReception_Management__c/fields/CastFixedPeriodFromS__c.field-meta.xml
<CustomField>
    <fullName>CastFixedPeriodFromS__c</fullName>
    <label>固定期間見込み（開始）西暦</label>
    <type>Date</type>
</CustomField>