force-app/main/default/objects/AccidentReception_Management__c/fields/CastFixedPeriodTo__c.field-meta.xml
<CustomField>
    <fullName>CastFixedPeriodTo__c</fullName>
    <label>固定期間見込み（終了）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>