force-app/main/default/objects/AccidentReception_Management__c/fields/CastFixedPeriodToFreeInput__c.field-meta.xml
<CustomField>
    <fullName>CastFixedPeriodToFreeInput__c</fullName>
    <label>固定期間見込みフリー入力（終了）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>