force-app/main/default/objects/AccidentReception_Management__c/fields/CastFixedPeriodToS__c.field-meta.xml
<CustomField>
    <fullName>CastFixedPeriodToS__c</fullName>
    <label>固定期間見込み（終了）西暦</label>
    <type>Date</type>
</CustomField>