force-app/main/default/objects/AccidentReception_Management__c/fields/ChargeMsg__c.field-meta.xml
<CustomField>
    <fullName>ChargeMsg__c</fullName>
    <label>担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>