force-app/main/default/objects/AccidentReception_Management__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>