force-app/main/default/objects/AccidentReception_Management__c/fields/ConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationDate__c</fullName>
    <label>個人情報の同意確認日</label>
    <type>Date</type>
</CustomField>