force-app/main/default/objects/AccidentReception_Management__c/fields/Confirmer__c.field-meta.xml
<CustomField>
    <fullName>Confirmer__c</fullName>
    <formula>IF ( TEXT( PersonInfoConfirm__c ) =&quot;案内のうえ了承済み&quot; ,  CreatedBy.LastName  &amp;  CreatedBy.FirstName , &quot;&quot;)</formula>
    <label>確認者</label>
    <type>Text</type>
</CustomField>