force-app/main/default/objects/AccidentReception_Management__c/fields/ContactAddressInput__c.field-meta.xml
<CustomField>
    <fullName>ContactAddressInput__c</fullName>
    <label>宛名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>