force-app/main/default/objects/AccidentReception_Management__c/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <label>連絡日（西暦）</label>
    <type>Date</type>
</CustomField>